<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/confirm_delete"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_gravity="center" android:orientation="vertical"
    android:background="@drawable/layout_bg">

    <TextView
        android:id="@+id/delete_item"
        android:text="@string/delete_item"
        android:layout_width="200dp" android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/main_color"
        android:textColorHighlight="#ef31100d"
        android:textSize="24sp"
        android:gravity="bottom"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_trash"
        android:drawablePadding="8dp"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:textStyle="bold"
        android:textColor="@color/main_color"
        android:textColorHighlight="#ef31100d"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:id="@+id/tvItem"
        android:layout_below="@+id/delete_item"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
       />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvItem"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_label"
            android:id="@+id/btnOK"
            style="@style/NiceButton"
            android:layout_marginRight="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_label"
            android:id="@+id/btnCancel"
            style="@style/NiceButton"/>
    </LinearLayout>
</RelativeLayout>